# ai-assistant-for-jira-desktop

./: .cursorrules  .gitignore  LICENSE.md  README.md  package.json  vite.config.js
.github/workflows/: release.yml
docs/: ABOUT.md  CHANGELOG.md  GETTINGSTARTED.md
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.vue  ChangelogDialog.vue  GeneralSettings.vue  Greet.vue  InfoBox.vue  InfoDialog.vue  IssueDetails.vue  IssueFields.vue  JiraSettings.vue  JqlSearch.vue  MarkdownDialog.vue  MarkdownViewer.vue  PromptManagement.vue  ProviderSettings.vue  SearchHistory.vue  SettingsDialog.vue
src/components/IssueView/: ChildIssues.vue  IssueComments.vue  IssueView.vue  LinkedIssues.vue
src/components/Settings/: GeneralSettings.vue  JiraSettings.vue  ProviderSettings.vue  SettingsDialog.vue
src/composables/: JiraClient.js  Logger.js  OpenAIClient.js  Updater.js  useLogger.js  useUpdater.js  utility.js
src/helpers/: dialogUtils.js  jira.js  jiraUtils.js  markupUtils.js  openai.js  prompts.js  schemas.js  templates.js  textUtils.js
src/services/: jira.js  prompts.js
src/store/: index.js
src/stores/: persisted-store.js  settings-store.js  template-store.js
src/test/: mockJiraData.js
tests/: setup.js
tests/unit/: JqlSearch.spec.js
tests/unit/helpers/: jira.test.js  openai.test.js
